[project]
name = "pwn-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Artemis Livingstone",email = "ar.d.livingstone@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4"

dependencies = [
    "pwntools (>=4.14.0)",
    "z3 (>=0.2.0,<0.3.0)",
    "ropper (>=1.13.8,<2.0.0)",
    "angr (>=9.2.143,<10.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ropgadget (>=7.6,<8.0)",
    "pyelftools (>=0.32,<0.33)",
    "monkeyhex (>=1.7.4,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
